[package]
name    = "ecdsa-flow"
version = "1.0.0" # Also update html_root_url in lib.rs when bumping this
description   = """
Signature and elliptic curve types providing interoperable support for the
Elliptic Curve Digital Signature Algorithm (ECDSA)
"""
authors    = ["RustCrypto Developers"]
license    = "Apache-2.0 OR MIT"
repository = "https://github.com/RustCrypto/signatures"
edition    = "2018"
readme     = "README.md"
categories = ["cryptography", "no-std"]
keywords   = ["crypto", "ecc", "nist", "secp256k1", "signature"]

[dependencies]
elliptic-curve-flow = { version = "1.0.0" }
hmac = { version = "0.11", optional = true, default-features = false }
signature-flow = { version = "1.0.0", package="signature-flow", default-features = false, features = ["rand-preview"] }

# optional dependencies
der = { version = "0.4", optional = true }

[dev-dependencies]
elliptic-curve-flow = { version = "1.0.0", default-features = false, features = ["dev"] }
hex-literal = "0.3"
sha3 = { version = "0.9", optional = false, default-features = false }

[features]
default = ["digest"]
alloc = []
arithmetic = ["elliptic-curve-flow/arithmetic"]
dev = ["arithmetic", "digest", "elliptic-curve-flow/dev", "hazmat"]
digest = ["signature-flow/digest-preview"]
hazmat = []
pkcs8 = ["elliptic-curve-flow/pkcs8", "der"]
pem = ["elliptic-curve-flow/pem", "pkcs8"]
sign = ["arithmetic", "digest", "hazmat", "hmac"]
std = ["alloc", "elliptic-curve-flow/std", "signature-flow/std"]
verify = ["arithmetic", "digest", "hazmat"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
